--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                         <li><a href="#how-it-works">How it Works</a></li>
                         <li><a href="#api-key">API Key</a></li>
                         <li><a href="#demo">Demo</a></li>
-                        <li><a href="#cta" class="cta-nav">Get Started</a></li>
+                        <li><a href="https://github.com/msveshnikov/thinkloop" class="cta-nav">Get Started</a></li>
                     </ul>
                 </nav>
             </div>
@@ -923,7 +923,7 @@
                 <p class="hero-subtitle">
                     Experience rapid-fire thinking in containerized loops, generating thousands of iterations to build anything you can dream up.
                 </p>
-                <a href="#cta" class="cta-button">Start Your Thinking Loop <i class="fas fa-arrow-right"></i></a>
+                <a href="https://github.com/msveshnikov/thinkloop" class="cta-button">Start Your Thinking Loop <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
     </section>
