--- a/index.html
+++ b/index.html
@@ -522,6 +522,15 @@
                 margin-top: 30px; /* Add some space above the iframe */
             }
 
+            .result-preview-iframe2 {
+                width: 100%;
+                height: 500px; /* Adjust height as needed */
+                border: 1px solid var(--light-dark);
+                border-radius: 8px;
+                background-color: #ebf1f2;
+                margin-top: 30px; /* Add some space above the iframe */
+            }
+
             .api-key-section {
                 padding: 80px 0;
                 background-color: var(--darker);
@@ -1216,8 +1225,13 @@
                 <h2 class="section-title">Loop Results</h2>
                 <div id="results-output" class="results-output"></div>
                 <iframe
+                    class="result-preview-iframe2"
+                    src="2/README.md"
+                    title="Brainstrom"
+                ></iframe>
+                <iframe
                     class="result-preview-iframe"
-                    src="1/index.html"
+                    src="2/index.html"
                     title="Result Preview"
                 ></iframe>
             </div>
