--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>thinkloop.run - Unleash Iterative Creativity</title>
+        <title>autovibe.dev - Unleash Iterative Creativity</title>
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
             rel="stylesheet"
@@ -1092,7 +1092,7 @@
         <header id="header">
             <div class="container">
                 <div class="header-inner">
-                    <a href="#" class="logo"><i class="fas fa-brain"></i>thinkloop.run</a>
+                    <a href="#" class="logo"><i class="fas fa-brain"></i>autovibe.dev</a>
                     <div class="mobile-menu-btn" id="mobile-menu-btn">
                         <i class="fas fa-bars"></i>
                     </div>
@@ -1127,13 +1127,13 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Unleash Iterative Creativity with thinkloop.run</h1>
+                    <h1 class="hero-title">Unleash Iterative Creativity with autovibe.dev</h1>
                     <p class="hero-subtitle">
                         Experience rapid-fire thinking in containerized loops, generating thousands
                         of iterations to build anything you can dream up.
                     </p>
                     <a href="#loop-input-section" class="cta-button"
-                        >Start Your Thinking Loop <i class="fas fa-arrow-right"></i
+                        >Start Your Vibe Coding <i class="fas fa-arrow-right"></i
                     ></a>
                 </div>
             </div>
@@ -1330,7 +1330,7 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="footer-column">
-                        <span class="footer-logo">thinkloop.run</span>
+                        <span class="footer-logo">autovibe.dev</span>
                         <p class="footer-description">
                             Empowering rapid iterative thinking through containerized loops.
                         </p>
@@ -1388,7 +1388,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    &copy; <span id="copyright-year"></span> thinkloop.run. All rights reserved.
+                    &copy; <span id="copyright-year"></span> autovibe.dev. All rights reserved.
                 </div>
             </div>
         </footer>
