--- a/2/index.html
+++ b/2/index.html
@@ -4,67 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poker Game</title>
+    <title>Poker Game - 5 Card Draw</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="game-container">
-        <h1>Poker Game</h1>
-
-        <div id="table">
-            <div id="dealer-area">
-                <h2>Dealer Hand</h2>
-                <div id="dealer-hand" class="hand">
-                    <!-- Dealer cards will be added here by script.js -->
-                    <div class="card placeholder"></div>
-                    <div class="card placeholder"></div>
-                </div>
-            </div>
-
-            <div id="community-card-area">
-                <h2>Community Cards</h2>
-                <div id="community-cards" class="hand">
-                    <!-- Community cards will be added here by script.js -->
-                    <div class="card placeholder"></div>
-                    <div class="card placeholder"></div>
-                    <div class="card placeholder"></div>
-                    <div class="card placeholder"></div>
-                    <div class="card placeholder"></div>
-                </div>
-            </div>
-
-            <div id="pot-area">
-                <h2>Pot</h2>
-                <div id="pot">Pot: $0</div>
+    <div class="game-table">
+        <!-- Dealer Area -->
+        <div class="dealer-area">
+            <h2>Dealer Hand</h2>
+            <div id="dealer-hand" class="hand">
+                <!-- Dealer cards (initially hidden) -->
+                <div class="card back"></div>
+                <div class="card back"></div>
+                <div class="card back"></div>
+                <div class="card back"></div>
+                <div class="card back"></div>
             </div>
         </div>
 
-        <div id="player-area">
+        <!-- Discard Pile Area (Repurposing community area visually) -->
+        <div class="community-cards"> <!-- Using this class for layout -->
+             <h2>Discard Pile</h2>
+             <div id="discard-pile" class="hand">
+                 <!-- Discarded cards will appear here -->
+                 <span style="color: rgba(255,255,255,0.5);">(Empty)</span>
+             </div>
+        </div>
+
+        <!-- Player Area -->
+        <div class="player-area">
             <h2>Player Hand</h2>
-             <div id="player-info">Chips: $1000</div>
             <div id="player-hand" class="hand">
-                <!-- Player cards will be added here by script.js -->
-                 <div class="card placeholder"></div>
-                 <div class="card placeholder"></div>
+                <!-- Player cards -->
+                <div class="card back"></div>
+                <div class="card back"></div>
+                <div class="card back"></div>
+                <div class="card back"></div>
+                <div class="card back"></div>
             </div>
         </div>
 
-        <div id="controls">
+        <!-- Info Area -->
+        <div class="info-area">
+             <div id="pot-area">
+                 <h2>Pot</h2>
+                 <p id="pot">Pot: $<span id="pot-amount">0</span></p>
+             </div>
+             <div id="player-info-area">
+                 <h2>Chips</h2>
+                 <p id="player-info">Chips: $<span id="player-chips-amount">1000</span></p>
+             </div>
+        </div>
+
+        <!-- Controls Area -->
+        <div class="controls-area">
             <button id="deal-button">Deal</button>
+            <button id="draw-button" disabled>Draw/Discard</button>
             <button id="check-button" disabled>Check</button>
-            <button id="bet-button" disabled>Bet</button>
             <input type="number" id="bet-amount" value="10" min="1" step="1" disabled>
-            <button id="call-button" disabled>Call</button>
-            <button id="raise-button" disabled>Raise</button>
+            <button id="bet-button" disabled>Bet</button>
             <button id="fold-button" disabled>Fold</button>
+            <!-- Removed Call/Raise for 5-Card Draw simplicity -->
         </div>
 
-        <div id="status-message-area">
-             <h2>Status</h2>
-            <p id="status-message">Welcome to Poker! Click Deal to start.</p>
-        </div>
+    </div> <!-- end .game-table -->
 
+    <div id="status-message-area" style="text-align: center; margin-top: 20px;">
+        <h2>Status</h2>
+        <p id="status-message">Welcome to 5 Card Draw! Click Deal to start.</p>
     </div>
 
     <script src="script.js"></script>
