--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
                             </p>
                         </div>
                         <button type="submit" id="run-loop-btn" class="cta-button">
-                            Run Thinking Loop <i class="fas fa-play"></i>
+                            Run Vibing Loop <i class="fas fa-play"></i>
                         </button>
                         <div id="status-message" class="status-message" style="display: none"></div>
                     </form>
@@ -1241,11 +1241,11 @@
         <section class="results-section" id="results-section">
             <div class="container">
                 <h2 class="section-title">Loop Results & Previews</h2>
-                <div id="results-output" class="results-output"></div>
+                <!-- <div id="results-output" class="results-output"></div> -->
                 <div class="iframe-container">
                     <iframe
                         class="result-preview-iframe2"
-                        src="2/README.md"
+                        src="2/README.txt"
                         title="Brainstorm/Readme Preview"
                     ></iframe>
                     <iframe
@@ -1388,7 +1388,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    &copy; <span id="copyright-year"></span> autovibe.dev. All rights reserved.
+                    &copy; <span id="copyright-year"></span> MaxSoft. All rights reserved.
                 </div>
             </div>
         </footer>
@@ -1559,7 +1559,7 @@
                         return;
                     }
 
-                    displayStatus('Running thinking loop...', 'loading');
+                    displayStatus('Running vibing loop...', 'loading');
                     runLoopBtn.disabled = true;
 
                     try {
